# predicting_career_success

./: Makefile  README.md  pyproject.toml  requirements.txt
Week_10/: __init__.py  dataset.py  features.py  plots.py
Week_10/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: career_success_nn_model.pth  gradient_boosting_regressor.joblib  lasso_regression_model.joblib  pytorch_neural_network.pth
notebooks/: sprint-2.ipynb
reports/figures/: are sat scores relevant - Google Search.html
